實作 UC-010 TaskStatisticsUseCase - 統計分析與快取機制整合